--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ search_enabled: true
 # Enable support for hyphenated search words:
 search_tokenizer_separator: /[\s/]+/
 
-logo: '/assets/logo.png'
+logo: '/assets/logo.svg'
 
 remote_theme: pmarsceill/just-the-docs
 
