--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,9 +16,9 @@ aux_links:
     'Docs':
         - 'https://docs.lakefs.io/'
     'Github':
-        - 'http://localhost:4000/'
+        - 'https://github.com/treeverse/lakeFS'
     'Blog':
-        - 'https://lakefs.daniellakh.com/'
+        - 'https://lakefs.io/blog/'
 
 buttons:
     'Get Started':
@@ -37,11 +37,11 @@ footer_links:
     'Docs':
         - 'https://docs.lakefs.io/'
     'Github':
-        - 'http://localhost:4000/'
+        - 'https://github.com/treeverse/lakeFS'
     'Blog':
-        - 'https://lakefs.daniellakh.com/'
-    'Contact Us':
-        - 'https://lakefs.daniellakh.com/'
+        - 'https://lakefs.io/blog/'
+    'Contact':
+        - 'https://lakefs.io/contact-us/'
 
 footer_social:
     'linkedin':
@@ -55,6 +55,6 @@ footer_social:
 
 footer_bottom_links:
     'Terms of use':
-        - 'https://docs.lakefs.io/'
+        - 'https://lakefs.io/terms-of-use/'
     'Privacy Policy':
         - 'http://localhost:4000/'
